updated to use for of  (needs downlevelIteration in tsconfig now)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
         "strict": true,
     "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     "strictNullChecks": false,              /* Enable strict null checks. */
-    }
+    "downlevelIteration": true
+    }, 
 }
